Bug 320914 Firefox crashed with gnopernicus magnifier [@nsXULMenuitemAccessible::GetState] r=aaronleventhal sr=roc